--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,4 +32,7 @@
         </activity>
     </application>
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
 </manifest>
