--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,24 +17,23 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".RecallActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".AddActivity"
-            android:parentActivityName=".ResearchActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".ResearchActivity" />
         <activity
             android:name=".ModifyActivity"
-            android:parentActivityName=".ResearchActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".ResearchActivity" />
         <activity
             android:name=".ResearchActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,10 +41,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlarmRecall"/>
-
+        <receiver android:name=".AlarmRecall" />
     </application>
-
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
 
 </manifest>
